# ELRS-Hybrid-Detector

./: .gitignore  README.md
obsidian-vault/: CLAUDE.md  PROGRESS.md
obsidian-vault/00-overview/: architecture.md  project-overview.md
obsidian-vault/agents/: cpp-dev.md  docs.md  dsp-research.md  knowledge-builder.md  orchestrator.md  python-dev.md  test-qa.md
obsidian-vault/docs/: cfar-spec.md  pipeline-overview.md  stage2-dwt-spec.md  stage2-plan.md
obsidian-vault/logs/: decisions-log.md  kb-extra-links-command.md  session-log-stage1.md  test-results-2026-05-28.md
obsidian-vault/project/: overview.md
obsidian-vault/research/: 01-system-architect.md  02-tz1-dechirp-mf.md  03-tz2-dwt-cwt.md  04-tz3-wigner-hough.md  05-tz4-nelora.md  06-tz5-hybrid-pipeline.md  07-oot-gnuradio-skeleton.md  08-stage1-oscfar-cpp.md  09-stage2-blind-estimator-py.md  10-gnuradio-flowgraph.md  11-latency-decision-fusion.md  12-adrv9009-artix7-migration.md  13-stage4-nelora-verifier-onnx.md  14-commercial-defence-analysis.md  15-rf-fingerprinting-tz.md  16-edge-ai-fhss-tracker.md  17-gpu-stft-cfar-analysis.md  18-research-questions.md  19-full-cuda-cpp-pipeline.md  20-cic-lora-collision-decoding.md  20-grcon25-elrs-gnuradio-paper.md  21-os-cfar-realtime-impl.md  (+74 more)
src/: CMakeLists.txt  bench_main.cpp  cfar2d.cpp  cfar2d.hpp
src/stage2/: bench_stage2.py  blind_estimator.py  cwt_estimator.py  dwt_estimator.py  gr_blind_estimator.py  requirements.txt
tests/: .gitignore  build_lib.sh  cfar2d_c.cpp  cfar2d_py.py  plot_and_report.py  run.sh  synth.py  test-results.json  test_cfar2d.py
(+17 files in other folders)
